@@ -2265,12 +2265,168 @@ element (that is, an element which references a <a>'clipPath'</a>
 element via a 'clip-path' property, or a child of the 
 referencing element) must remain the same as if it were not clipped.</p>
 
-<p>By default, <a href="interact.html#PointerEventsProperty">pointer events</a>
+<p>By default, <a href="http://www.w3.org/TR/2011/REC-SVG11-20110816/interact.html#PointerEventsProperty">pointer events</a>
 must not be dispatched on the clipped (non-visible) regions of a shape.  For
 example, a circle with a radius of 10 which is clipped to a circle with a radius
 of 5 will not receive <span class="event-name">'click'</span> events outside the
 smaller radius. Later versions of this specification may define new properties to enable
 fine-grained control over the interactions between hit testing and clipping.</p>
+
+<h2 id="DOMInterfaces">DOM interfaces</h2>
+
+<h3 id="InterfaceSVGClipPathElement">Interface SVGClipPathElement</h3>
+
+<edit:with element='clipPath'>
+
+<p>The <a>SVGClipPathElement</a> interface corresponds to the <a>'clipPath'</a> element.</p>
+
+<pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGDefinitionElement</a> {
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#__svg__SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
+};
+
+<a>SVGClipPathElement</a> implements <a>SVGUnitTypes</a>;</pre>
+
+<dl class="interface">
+<dt class="attributes-header">Attributes:</dt>
+<dd>
+<dl class="attributes">
+
+<dt id="__svg__SVGClipPathElement__clipPathUnits" class="attribute first-child"><b>clipPathUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'clipPathUnits'</a> on the given
+<a>'clipPath'</a> element.  Takes one of the constants defined in
+<a>SVGUnitTypes</a>.
+
+</div>
+</dd>
+</dl>
+</dd>
+</dl>
+
+</edit:with>
+
+
+<h3 id="InterfaceSVGMaskElement">Interface SVGMaskElement</h3>
+
+<edit:with element='mask'>
+
+<p>The <a>SVGMaskElement</a> interface corresponds to the <a>'mask element'</a> element.</p>
+
+<pre class="idl">interface <b>SVGMaskElement</b> : <a>SVGDefinitionElement</a> {
+
+  // Mask Types
+  const unsigned short <a href="#__svg__SVGMaskElement__SVG_MASKTYPE_LUMINANCE">SVG_MASKTYPE_LUMINANCE</a> = 0;
+  const unsigned short <a href="#__svg__SVGMaskElement__SVG_MASKTYPE_ALPHA">SVG_MASKTYPE_ALPHA</a> = 1;
+
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#__svg__SVGMaskElement__maskUnits">maskUnits</a>;
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#__svg__SVGMaskElement__maskContentUnits">maskContentUnits</a>;
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#__svg__SVGMaskElement__x">x</a>;
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#__svg__SVGMaskElement__y">y</a>;
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#__svg__SVGMaskElement__width">width</a>;
+  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#__svg__SVGMaskElement__height">height</a>;
+};
+
+<a>SVGMaskElement</a> implements <a>SVGUnitTypes</a>;</pre>
+
+<dl class="interface">
+<dt class="constants-header">Constants in group “Mask Types”:</dt>
+<dd>
+<dl class="constants">
+
+<dt id="__svg__SVGMaskElement__SVG_MASKTYPE_LUMINANCE" class="constant first-child"><b>SVG_MASKTYPE_LUMINANCE</b><span class="idl-type-parenthetical"> (unsigned short)</span></dt>
+<dd class="constant">
+<div>
+Corresponds to value <span class="attr-value">'luminance'</span>.
+
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__SVG_MASKTYPE_ALPHA" class="constant"><b>SVG_MASKTYPE_ALPHA</b><span class="idl-type-parenthetical"> (unsigned short)</span></dt>
+<dd class="constant">
+<div>
+Corresponds to value <span class="attr-value">'alpha'</span>.
+
+
+</div>
+</dd>
+</dl>
+</dd>
+<dt class="attributes-header">Attributes:</dt>
+<dd>
+<dl class="attributes">
+
+<dt id="__svg__SVGMaskElement__maskUnits" class="attribute first-child"><b>maskUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'maskUnits'</a> on the given
+<a>'mask element'</a> element.  Takes one of the constants defined in
+<a>SVGUnitTypes</a>.
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__maskContentUnits" class="attribute"><b>maskContentUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'maskContentUnits'</a> on the given
+<a>'mask element'</a> element.  Takes one of the constants defined in
+<a>SVGUnitTypes</a>.
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__x" class="attribute"><b>x</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'mask/x'</a> on the given <a>'mask element'</a>
+element.
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__y" class="attribute"><b>y</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'mask/y'</a> on the given <a>'mask element'</a>
+element.
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__width" class="attribute"><b>width</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'mask/width'</a> on the given
+<a>'mask element'</a> element.
+
+</div>
+</dd>
+
+<dt id="__svg__SVGMaskElement__height" class="attribute"><b>height</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dd class="attribute">
+<div>
+Corresponds to attribute <a>'mask/height'</a> on the given
+<a>'mask element'</a> element.
+
+</div>
+</dd>
+</dl>
+</dd>
+</dl>
+
+</edit:with>
+
+<h3 id="InterfaceSVGDefinitionElement">Interface SVGDefinitionElement</h3>
+
+<p>Interface <a>SVGDefinitionElement</a> represents SVG elements whose primary purpose
+is to define a reusable resource.</p>
+
+<pre class="idl">interface <b>SVGDefinitionElement</b> : <a>SVGElement</a> {
+};
+
+<a>SVGDefinitionElement</a> implements <a>SVGTests</a>;</pre>
 
 <h2 class=no-num id="references">
 References</h2>
