@@ -45,7 +45,6 @@
   <!-- ... properties ..................................................... -->
 
   <property name='mask' href='#MaskProperty'/>
-  <property name='fill-rule' href='http://www.w3.org/TR/2011/REC-SVG11-20110816/#FillRuleProperty'/>
 
   <!-- ... interfaces ..................................................... -->
 
@@ -58,7 +57,7 @@
 
   <!-- === defined in other specifications ================================ -->
 
-  <term name='basic shapes' href='http://www.w3.org/TR/2012/WD-dom-20120405/intro.html#TermBasicShapeElement'/>
+  <term name='basic shapes' href='http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermBasicShapeElement'/>
   <term name='bounding box' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermBoundingBox'/>
   <term name='compound selector' href='http://dev.w3.org/csswg/selectors4/#compound'/>
   <term name='decorated bounding box' href='http://www.w3.org/TR/SVGTiny12/intro.html#TermDecoratedBoundingBox'/>
