@@ -11,11 +11,11 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2012-10-19 name=dcterms.issued>
+  <meta content=2012-10-21 name=dcterms.issued>
   <meta content="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html"
    name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20121019/"
+  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20121021/"
    name=dcterms.identifier>
   <link href="#contents" rel=contents>
   <link href="#index" rel=index>
@@ -43,7 +43,7 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 19 October
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 21 October
     2012</h2>
 
    <dl>
@@ -51,7 +51,7 @@
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20121019/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20121021/-->
 
     <dt>Latest version:
 
@@ -254,6 +254,19 @@
       paths, geometry, and pointer events</a>
     </ul>
 
+   <li><a href="#DOMInterfaces"><span class=secno>9. </span>DOM
+    interfaces</a>
+    <ul class=toc>
+     <li><a href="#InterfaceSVGClipPathElement"><span class=secno>9.1.
+      </span>Interface SVGClipPathElement</a>
+
+     <li><a href="#InterfaceSVGMaskElement"><span class=secno>9.2.
+      </span>Interface SVGMaskElement</a>
+
+     <li><a href="#InterfaceSVGDefinitionElement"><span class=secno>9.3.
+      </span>Interface SVGDefinitionElement</a>
+    </ul>
+
    <li class=no-num><a href="#references"> References</a>
     <ul class=toc>
      <li class=no-num><a href="#normative-references"> Normative
@@ -424,7 +437,7 @@
     class=property>path</code>’</a>, <a class=element-name
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/text.html#TextElement">‘<code
     class=property>text</code>’</a> and <a
-    href="http://www.w3.org/TR/2012/WD-dom-20120405/intro.html#TermBasicShapeElement">basic
+    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermBasicShapeElement">basic
     shapes</a> which serve as the outline of a (in the absence of
     anti-aliasing) 1-bit <a href="#TermMask">mask</a>, where everything on
     the "inside" of the outline is allowed to show through but everything on
@@ -2035,7 +2048,7 @@ div {
         class=attr-name>‘fill’</span></a>, <a
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillOpacityProperty"><span
         class=attr-name>‘fill-opacity’</span></a>, <a
-        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/#FillRuleProperty"><span
+        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillRuleProperty"><span
         class=attr-name>‘fill-rule’</span></a>, <a
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/filters.html#FilterProperty"><span
         class=attr-name>‘filter’</span></a>, <a
@@ -3499,7 +3512,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
         class=attr-name>‘fill’</span></a>, <a
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillOpacityProperty"><span
         class=attr-name>‘fill-opacity’</span></a>, <a
-        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/#FillRuleProperty"><span
+        href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillRuleProperty"><span
         class=attr-name>‘fill-rule’</span></a>, <a
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/filters.html#FilterProperty"><span
         class=attr-name>‘filter’</span></a>, <a
@@ -3688,7 +3701,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    class=property>path</code>’</a> elements, <a class=element-name
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/text.html#TextElement">‘<code
    class=property>text</code>’</a> elements, <a
-   href="http://www.w3.org/TR/2012/WD-dom-20120405/intro.html#TermBasicShapeElement">basic
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermBasicShapeElement">basic
    shapes</a> (such as <a class=element-name
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/shapes.html#CircleElement">‘<code
    class=property>circle</code>’</a>) or a <a class=element-name
@@ -3703,7 +3716,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    class=property>path</code>’</a>, <a class=element-name
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/text.html#TextElement">‘<code
    class=property>text</code>’</a> or <a
-   href="http://www.w3.org/TR/2012/WD-dom-20120405/intro.html#TermBasicShapeElement">basic
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermBasicShapeElement">basic
    shapes</a> elements. Indirect references are an error and the <a
    class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> element must be ignored.
@@ -3784,7 +3797,8 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    or a child of the referencing element) must remain the same as if it were
    not clipped.
 
-  <p>By default, <a href="interact.html#PointerEventsProperty">pointer
+  <p>By default, <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/interact.html#PointerEventsProperty">pointer
    events</a> must not be dispatched on the clipped (non-visible) regions of
    a shape. For example, a circle with a radius of 10 which is clipped to a
    circle with a radius of 5 will not receive <span class=event-name>‘<code
@@ -3792,6 +3806,204 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    Later versions of this specification may define new properties to enable
    fine-grained control over the interactions between hit testing and
    clipping.
+
+  <h2 id=DOMInterfaces><span class=secno>9. </span>DOM interfaces</h2>
+
+  <h3 id=InterfaceSVGClipPathElement><span class=secno>9.1. </span>Interface
+   SVGClipPathElement</h3>
+  <edit:with element=clipPath>
+  <p>The <span class=xxx>SVGClipPathElement</span> interface corresponds to
+   the <a class=element-name href="#ClipPathElement">‘<code
+   class=property>clipPath</code>’</a> element.
+
+  <pre class=idl>interface <b>SVGClipPathElement</b> : <span
+   class=xxx>SVGDefinitionElement</span> {
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
+   href="#__svg__SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
+};
+
+<span
+   class=xxx>SVGClipPathElement</span> implements <span
+   class=xxx>SVGUnitTypes</span>;</pre>
+
+  <dl class=interface>
+   <dt class=attributes-header>Attributes:
+
+   <dd>
+    <dl class=attributes>
+     <dt class="attribute first-child"
+      id="__svg__SVGClipPathElement__clipPathUnits"><b>clipPathUnits</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#ClipPathElementClipPathUnitsAttribute">‘<code
+       class=property>clipPathUnits</code>’</a> on the given <a
+       class=element-name href="#ClipPathElement">‘<code
+       class=property>clipPath</code>’</a> element. Takes one of the
+       constants defined in <span class=xxx>SVGUnitTypes</span>.</div>
+    </dl>
+  </dl>
+  </edit:with>
+  <h3 id=InterfaceSVGMaskElement><span class=secno>9.2. </span>Interface
+   SVGMaskElement</h3>
+  <edit:with element=mask>
+  <p>The <span class=xxx>SVGMaskElement</span> interface corresponds to the
+   <a class=element-name href="#MaskElement">‘<code
+   class=property>mask</code>’</a> element.
+
+  <pre class=idl>interface <b>SVGMaskElement</b> : <span
+   class=xxx>SVGDefinitionElement</span> {
+
+  // Mask Types
+  const unsigned short <a
+   href="#__svg__SVGMaskElement__SVG_MASKTYPE_LUMINANCE">SVG_MASKTYPE_LUMINANCE</a> = 0;
+  const unsigned short <a
+   href="#__svg__SVGMaskElement__SVG_MASKTYPE_ALPHA">SVG_MASKTYPE_ALPHA</a> = 1;
+
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
+   href="#__svg__SVGMaskElement__maskUnits">maskUnits</a>;
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
+   href="#__svg__SVGMaskElement__maskContentUnits">maskContentUnits</a>;
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
+   href="#__svg__SVGMaskElement__x">x</a>;
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
+   href="#__svg__SVGMaskElement__y">y</a>;
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
+   href="#__svg__SVGMaskElement__width">width</a>;
+  readonly attribute <a
+   class=idlinterface
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
+   href="#__svg__SVGMaskElement__height">height</a>;
+};
+
+<span
+   class=xxx>SVGMaskElement</span> implements <span
+   class=xxx>SVGUnitTypes</span>;</pre>
+
+  <dl class=interface>
+   <dt class=constants-header>Constants in group “Mask Types”:
+
+   <dd>
+    <dl class=constants>
+     <dt class="constant first-child"
+      id="__svg__SVGMaskElement__SVG_MASKTYPE_LUMINANCE"><b>SVG_MASKTYPE_LUMINANCE</b><span
+      class=idl-type-parenthetical> (unsigned short)</span>
+
+     <dd class=constant>
+      <div> Corresponds to value <a class=attr-value
+       href="#luminance">‘<code class=property>luminance</code>’</a>.</div>
+
+     <dt class=constant
+      id="__svg__SVGMaskElement__SVG_MASKTYPE_ALPHA"><b>SVG_MASKTYPE_ALPHA</b><span
+      class=idl-type-parenthetical> (unsigned short)</span>
+
+     <dd class=constant>
+      <div> Corresponds to value <a class=attr-value href="#alpha">‘<code
+       class=property>alpha</code>’</a>.</div>
+    </dl>
+
+   <dt class=attributes-header>Attributes:
+
+   <dd>
+    <dl class=attributes>
+     <dt class="attribute first-child"
+      id="__svg__SVGMaskElement__maskUnits"><b>maskUnits</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementMaskUnitsAttribute">‘<code
+       class=property>maskUnits</code>’</a> on the given <a
+       class=element-name href="#MaskElement">‘<code
+       class=property>mask</code>’</a> element. Takes one of the constants
+       defined in <span class=xxx>SVGUnitTypes</span>.</div>
+
+     <dt class=attribute
+      id="__svg__SVGMaskElement__maskContentUnits"><b>maskContentUnits</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementMaskContentUnitsAttribute">‘<code
+       class=property>maskContentUnits</code>’</a> on the given <a
+       class=element-name href="#MaskElement">‘<code
+       class=property>mask</code>’</a> element. Takes one of the constants
+       defined in <span class=xxx>SVGUnitTypes</span>.</div>
+
+     <dt class=attribute id="__svg__SVGMaskElement__x"><b>x</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementXAttribute">‘<code class=property>x</code>’</a>
+       on the given <a class=element-name href="#MaskElement">‘<code
+       class=property>mask</code>’</a> element.</div>
+
+     <dt class=attribute id="__svg__SVGMaskElement__y"><b>y</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementYAttribute">‘<code class=property>y</code>’</a>
+       on the given <a class=element-name href="#MaskElement">‘<code
+       class=property>mask</code>’</a> element.</div>
+
+     <dt class=attribute id="__svg__SVGMaskElement__width"><b>width</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementWidthAttribute">‘<code
+       class=property>width</code>’</a> on the given <a class=element-name
+       href="#MaskElement">‘<code class=property>mask</code>’</a>
+       element.</div>
+
+     <dt class=attribute
+      id="__svg__SVGMaskElement__height"><b>height</b><span
+      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
+
+     <dd class=attribute>
+      <div> Corresponds to attribute <a class=attr-name
+       href="#MaskElementHeightAttribute">‘<code
+       class=property>height</code>’</a> on the given <a class=element-name
+       href="#MaskElement">‘<code class=property>mask</code>’</a>
+       element.</div>
+    </dl>
+  </dl>
+  </edit:with>
+  <h3 id=InterfaceSVGDefinitionElement><span class=secno>9.3.
+   </span>Interface SVGDefinitionElement</h3>
+
+  <p>Interface <span class=xxx>SVGDefinitionElement</span> represents SVG
+   elements whose primary purpose is to define a reusable resource.
+
+  <pre class=idl>interface <b>SVGDefinitionElement</b> : <span
+   class=xxx>SVGElement</span> {
+};
+
+<span
+   class=xxx>SVGDefinitionElement</span> implements <span
+   class=xxx>SVGTests</span>;</pre>
 
   <h2 class=no-num id=references> References</h2>
 
