@@ -1,3 +1,6 @@
+2012-10-21 dschulze@adobe.com
+	Add DOM interfaces for 'mask' and 'clipPath'.
+
 2012-10-19 dschulze@adobe.com
 	Merge clip region defintion from 'clip' and 'clip-path'.
 
